# QuantizedGemm

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_kernel.py  bench_kernel_swizzled.py  qwen_benchmark_test.py  torch_bench.py
docs/: L40s bench result.md  P0_requirements.md  bench_kernel.py  full_test_v1.md  v1_result+v2_improve.md  v2_result+v3_improve.md
integration/: convert.py  diagnose_precision.py  w8a8_linear.py
reference/: torch_reference.py
scripts/: setup_runpod.sh
tests/: qwen_w8a8_test.py  smoke_large_shapes.py  test_correctness.py
tools/: check_v3_choices.py  diagnose_autotune.py  profile_wrapper.py  stability_diagnosis.py  sweep_configs.py
triton_kernel/: w8a8_autotuned.py  w8a8_mm.py  w8a8_naive.py  w8a8_swizzled.py
